# custom-metal-view

./: README.md  universal_app_build.sh
app/: AAPLShaderTypes.h  AAPLShaders.metallib  AppDelegate.mm  BUILD.gn
app/controller/: WindowController.h  WindowController.m  WindowController.mm
app/model/: AAPLRenderer.mm  Renderer.h  Renderer.mm
app/shaders/: AAPLShaders.metal
app/view/: AAPLNSView.h  AAPLView.m  CaptureView.mm  MetalLayerView.m
scripts/: view_logs.sh
