import("//build/config/mac/templates/icon.gni")
import("//build/config/mac/templates/macos_app_bundle.gni")

macos_app_bundle("app") {
  output_name = "MetalApp"
  bundle_identifier = "com.jason5122.metal-app"
  info_plist = "resources/Info.plist"

  # define `code_signing_identity` in args.gn

  sources = [
    "AppDelegate.mm",
    "controller/WindowController.mm",
    "main.mm",
    "util/log_util.mm",
  ]

  frameworks = [ "Cocoa.framework" ]

  include_dirs = [ "//app" ]

  deps = [ ":icon" ]
}

icon("icon") {
  sources = [ "resources/app.iconset" ]
}
